--- a/README
+++ b/README
@@ -62,3 +62,5 @@ How to build and run under Windows:
      them empty.
   4. Click on 'Test Configuration', followed by 'Rebuild Database' and
      hopefully you should be good go! Enjoy your hackathon!
+
+     jharris - Push to Master - Test 001
